MapStruct implemented for expense and category module